--- a/siduction-btrfs-0.1.0/debian/changelog
+++ b/siduction-btrfs-0.1.0/debian/changelog
@@ -1,8 +1,9 @@
-siduction-btrfs (0.1.0-2) UNRELEASED; urgency=medium
+siduction-btrfs (0.1.0-2) unstable; urgency=medium
 
+  [ Axel Konrad ]
   * Move the / filesystem type test into test-btrfs-default.sh
 
- -- Axel Konrad <emma-konrad@web.de>  Tue, 28 Feb 2023 19:34:36 +0100
+ -- Torsten Wohlfarth <towo@siduction.org>  Wed, 01 Mar 2023 11:35:26 +0100
 
 siduction-btrfs (0.1.0-1) unstable; urgency=low
 
