--- a/siduction-btrfs-0.1.0/debian/changelog
+++ b/siduction-btrfs-0.1.0/debian/changelog
@@ -1,3 +1,11 @@
+siduction-btrfs (0.1.0-3) unstable; urgency=medium
+
+  [Axel Konrad]
+  * fix system services
+
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Tue, 07 Mar 2023 22:48:45 +0100
+
 siduction-btrfs (0.1.0-2) unstable; urgency=medium
 
   [ Axel Konrad ]
