--- a/siduction-btrfs-0.1.0/debian/changelog
+++ b/siduction-btrfs-0.1.0/debian/changelog
@@ -1,3 +1,10 @@
+siduction-btrfs (0.1.0-4) unstable; urgency=medium
+
+  [Axel Konrad]
+  * fixes
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Wed, 08 Mar 2023 15:38:12 +0100
+
 siduction-btrfs (0.1.0-3) unstable; urgency=medium
 
   [Axel Konrad]
