--- a/siduction-btrfs-0.1.1/debian/changelog
+++ b/siduction-btrfs-0.1.1/debian/changelog
@@ -45,4 +45,4 @@ siduction-btrfs (0.1.0-1) unstable; urgency=low
   * Added test for root filesystem type
   * Initial release.
 
- -- Axel Konrad <emma-konrad@web.de>  Mon, 27 Feb 2023 14:35:42 +0100
+ -- Axel Konrad <ak-li@siduction.org>  Mon, 27 Feb 2023 14:35:42 +0100
