--- a/siduction-btrfs-0.1.2/debian/changelog
+++ b/siduction-btrfs-0.1.2/debian/changelog
@@ -1,3 +1,10 @@
+siduction-btrfs (0.1.2-1) unstable; urgency=medium
+
+    [Axel Konrad]
+  * various fixes
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Mon, 22 Jan 2024 20:23:16 +0100
+
 siduction-btrfs (0.1.1-1) unstable; urgency=medium
 
   [Fabian Bermel]
