--- a/siduction-btrfs-0.1.3/debian/changelog
+++ b/siduction-btrfs-0.1.3/debian/changelog
@@ -1,3 +1,10 @@
+siduction-btrfs (0.1.3-1) unstable; urgency=medium
+
+    [Axel Konrad]
+  * upstream changes
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sat, 25 May 2024 17:42:19 +0200
+
 siduction-btrfs (0.1.2-1) unstable; urgency=medium
 
     [Axel Konrad]
