--- a/siduction-btrfs-0.2.0/debian/install
+++ b/siduction-btrfs-0.2.0/debian/install
@@ -1,5 +1,6 @@
-09_siduction-btrfs          /etc/grub.d/
-siduction_btrfs.path        /usr/lib/systemd/system/
-siduction_btrfs.service     /usr/lib/systemd/system/
-siduction_btrfs.timer       /usr/lib/systemd/system/
-test-btrfs-default.sh       /usr/share/siduction/
+09_siduction-btrfs              /etc/grub.d/
+91-siduction-entry-key.install  /usr/lib/kernel/install.d/
+siduction_btrfs.path            /usr/lib/systemd/system/
+siduction_btrfs.service         /usr/lib/systemd/system/
+siduction_btrfs.timer           /usr/lib/systemd/system/
+test-btrfs-default.sh           /usr/share/siduction/
