--- a/siduction-btrfs-0.3.0/debian/changelog
+++ b/siduction-btrfs-0.3.0/debian/changelog
@@ -1,10 +1,12 @@
-siduction-btrfs (0.3.0) unstable; urgency=medium
+siduction-btrfs (0.3.0-1) unstable; urgency=medium
 
   [Axel Konrad]
   * Rewritten with the aim of using the Snapper plugin directory.
   * GRUB is now able to extend the paths of kernel and initrd by the subvolumes.
   * So the systemd timer unit and the file 09_siduction-btrfs could be removed.
   * Support added for a boot partition when using GRUB.
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sat, 02 Nov 2024 12:26:12 +0100
 
 siduction-btrfs (0.2.0) unstable; urgency=medium
 
@@ -14,7 +16,7 @@ siduction-btrfs (0.2.0) unstable; urgency=medium
   * Improved description of snapshots in snapper
   * Files Info.md and README.md updated
 
- -- Torsten Wohlfarth <towo@siduction.org> 
+ -- Torsten Wohlfarth <towo@siduction.org>  Sat, 02 Nov 2024 12:27:33 +0100
 
 siduction-btrfs (0.1.3-1) unstable; urgency=medium
 
@@ -61,7 +63,6 @@ siduction-btrfs (0.1.0-3) unstable; urgency=medium
 
   [Axel Konrad]
   * fix system services
-
 
  -- Torsten Wohlfarth <towo@siduction.org>  Tue, 07 Mar 2023 22:48:45 +0100
 
