--- a/siduction-btrfs-0.3.0/debian/changelog
+++ b/siduction-btrfs-0.3.0/debian/changelog
@@ -1,3 +1,10 @@
+siduction-btrfs (0.3.0-4) unstable; urgency=medium
+
+  [Axel Konrad]
+  * fixes 91-siduction-entry-key.install. Only run if / is btrfs.
+
+ -- Torsten Wohlfarth <towo@siduction.org>
+
 siduction-btrfs (0.3.0-3) unstable; urgency=medium
 
   [Axel Konrad]
