--- a/siduction-btrfs-0.3.0/debian/changelog
+++ b/siduction-btrfs-0.3.0/debian/changelog
@@ -5,7 +5,7 @@ siduction-btrfs (0.3.0-8) unstable; urgency=medium
   * Improved description.
   * Typo
 
- -- Torsten Wohlfarth <towo@siduction.org>
+ -- Torsten Wohlfarth <towo@siduction.org>  Fri, 10 Jan 2025 16:44:52 +0100
 
 siduction-btrfs (0.3.0-7) unstable; urgency=medium
 
